--- a/index.html
+++ b/index.html
@@ -9,16 +9,44 @@
     <link rel="stylesheet" href="fonts/MyriadPro-Light/style.css" type="text/css">
     <link rel="stylesheet" href="fonts/MyriadPro-SemiboldIt/style.css" type="text/css">
     <link rel="stylesheet" href="css/style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> </head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./font-awesome/css/font-awesome.min.css"> </head>
 
 <body>
     <header class="header">
         <div class="wrap">
-            <div class="headerMenu">
-                <a href="#" class="headerLogo"><img src="./img/logo_138x40.png" alt="logo"></a>
+            <div class="headerMenu headerPadding">
+                <a href="#" class="headerLogo"><img class="logo" src="./img/logo_160x46.png" alt="logo"></a>
+                <div class="headerMainMenu">
+                    <div class="headerBurger"><i class="fa fa-bars fa-2x" aria-hidden="true"></i></div>
+                    <ul class="mainMenuItems">
+                        <li class="mainMenuItem"><a href="#" class="mainMenuLink">Главная</a></li>
+                        <li class="mainMenuItem"><a href="#" class="mainMenuLink">Отзывы</a></li>
+                        <li class="mainMenuItem"><a href="#" class="mainMenuLink">Гарантии</a></li>
+                        <li class="mainMenuItem"><a href="#" class="mainMenuLink">Описание</a></li>
+                        <li class="mainMenuItem"><a href="#" class="mainMenuLink">Партнеры</a></li>
+                        <li class="mainMenuItem"><a href="#" class="mainMenuLink">Преимущества</a></li>
+                        <li class="mainMenuItem"><a href="#" class="mainMenuLink">FAQ</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="headerSendContainer">
+                <h1 class="headerHeading headerTextColor">Придумайте что отправить</h1>
+                <h2 class="headerDescribe headerTextColor">А посылка доедет сама</h2>
+                <button class="sendButton">отправить посылку</button>
             </div>
         </div>
     </header>
+    <section class="about">
+        <div class="wrap">
+            <div class="aboutBlock"> 
+                <img class="aboutImage" src="./img/about.png" alt="about">
+                <h3 class="aboutHeading">Мы - агрегатор служб доставки</h3>
+                <p class="aboutDesc">С&nbsp;нами удобно вам, вашим клиентам и&nbsp;курьерским службам. Для вас наши услуги бесплатны, так как мы&nbsp;получаем бонусы от&nbsp;служб доставок за&nbsp;предоставленный объем заказов, а&nbsp;вы&nbsp;получаете надежный сервис в&nbsp;подарок!</p>
+                <button class="sendButton">отправить посылку</button>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
